# doge_spellchecker_bot

./: Dockerfile  README.md  bot.py  config.py  pyproject.toml  rusyllab.py
.github/workflows/: deploy.yml
