[tool.poetry]
name = "doge_spellchecker_bot"
version = "0.1.0"
description = ""
authors = ["romutchio <budljanskiy@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
language-tool-python = "^2.5.2"
pyTelegramBotAPI = "^3.7.6"
poetry = "^1.1.4"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
